--- a/index.html
+++ b/index.html
@@ -16,33 +16,10 @@
             <div class="col-lg-6 offset-lg-3">
                 <h1 class="text-center fw-bold main-title">Todo List App - OWL</h1>
                 <p class="text-center h5 text-muted mb-5">Odoo OWL Framework for Beginner</p>
-                <div>
-                    <div class="input-group-lg w-100 d-flex border p-2 align-items-center">
-                        <input type="text" class="form-control-lg flex-fill border-0 me-1" placeholder="Write your new task" aria-label="Write your new task" aria-describedby="button-addon2">
-                        <input type="color" class="form-control-lg form-control-color border-0 bg-white m-0" id="color" value="#563d7c" title="Choose your color">
-                        <button class="btn btn-primary" type="button" id="button-addon2"><i class="bi bi-plus-lg fs-3"></i></button>
-                    </div>
-                </div>
-                <ul class="d-flex flex-column mt-5 p-0">
-                    <li class="d-flex align-items-center justify-content-between border p-3 mb-2 rounded">
-                        <div class="form-check form-switch fs-5">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Default checkbox
-                            </label>
-                        </div>
-                        <div>
-                            <button class="btn btn-primary me-2">
-                                <i class="bi bi-pencil fs-3"></i>
-                            </button>
-                            <button class="btn btn-danger">
-                                <i class="bi bi-trash fs-3"></i>
-                            </button>
-                        </div>
-                    </li>
-                </ul>
+                <div id="root"></div>
             </div>
         </div>
-    </div> 
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
